<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_currencies"
            android:icon="@drawable/ic_cash_usd"
            android:title="@string/menu_home_currencylist" />
        <item
            android:id="@+id/nav_exchange"
            android:icon="@drawable/ic_tumblr_reblog"
            android:title="@string/menu_home_exchange" />
        <item
            android:id="@+id/nav_wallets"
            android:icon="@drawable/ic_wallet_outline"
            android:title="@string/menu_home_wallets" />

    </group>

    <group android:id="@+id/group_user">
        <item
            android:id="@+id/item_home_logout"
            android:icon="@drawable/ic_logout_variant"
            android:title="خروج"/>
    </group>

</menu>
